# zaifer-mcp

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
zaifer_mcp/: __init__.py  __main__.py  server.py
zaifer_mcp/api/: client.py
zaifer_mcp/models/: __init__.py  account.py  chart.py  common.py  market.py  trade.py
zaifer_mcp/tools/: account.py  chart.py  market.py  trade.py
